Updated OpenAPI specs
